AST context structure rebuild between iterations